deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-certs
spec:
  selector:
    matchLabels:
      app: kube-certs
  template:
    metadata:
      labels:
        app: kube-certs
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: 423755636060.dkr.ecr.us-east-1.amazonaws.com/golu:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
---
apiVersion: v1
kind: Service
metadata:
  name: kube-certs
spec:
  selector:
    app: kube-certs
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4499
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-certs-ingress
  annotations:
    cert-manager.io/cluster-issuer: kubeissuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # ✅ Re-enabled HTTPS redirect
spec:
  tls:
    - hosts:
        - wisecow.work.gd
      secretName: demo
  rules:
    - host: wisecow.work.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-certs
                port:
                  number: 80
